--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@ Då de är sopor! Läste lite html via en kurs "digitalt skpanade" på gymmnasie
     </li>
 </ul>
     </div>
-    
+    <a href="www.google.se">Google</a>
 </body>
 </html>
